clusters/main/kubernetes/apps/vaultwarden/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden
  annotations:
    volsync.backube/privileged-movers: "true"
  labels:
    goldilocks.fairwinds.com/enabled: "true"
